--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <section>
         <button onclick="saludo()">Click aqui</button>
         <button onclick="despedir()">click :0</button>
+        <button onclick="botonP()">Boton de prueba 1 </button>
     </section>
 </body>
 <script src="app.js"></script>
